// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpandableSection should render 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <Component title="Title">
        <WithStyles(WithTheme(inject-ExpandableSection)) title="Title">
          <WithTheme(inject-ExpandableSection) title="Title" classes={{...}}>
            <inject-ExpandableSection theme={{...}} title="Title" classes={{...}}>
              <ExpandableSection theme={{...}} title="Title" classes={{...}} amp={false} margins={true}>
                <WithStyles(ExpansionPanel) classes={{...}} expanded={[undefined]} defaultExpanded={[undefined]} onChange={[Function]}>
                  <ExpansionPanel expanded={[undefined]} defaultExpanded={false} onChange={[Function]} classes={{...}} disabled={false}>
                    <WithStyles(Paper) className="MuiExpansionPanel-root-13 RSFExpandableSection-root-1 RSFExpandableSection-margins-2 RSFExpandableSection-expandedPanel-10" elevation={1} square={true}>
                      <Paper className="MuiExpansionPanel-root-13 RSFExpandableSection-root-1 RSFExpandableSection-margins-2 RSFExpandableSection-expandedPanel-10" elevation={1} square={true} classes={{...}} component="div">
                        <div className="MuiPaper-root-16 MuiPaper-elevation1-19 MuiExpansionPanel-root-13 RSFExpandableSection-root-1 RSFExpandableSection-margins-2 RSFExpandableSection-expandedPanel-10">
                          <WithStyles(ExpansionPanelSummary) expandIcon={{...}} classes={{...}} disabled={false} expanded={false} onChange={[Function]}>
                            <ExpansionPanelSummary expandIcon={{...}} disabled={false} expanded={false} onChange={[Function]} classes={{...}}>
                              <WithStyles(ButtonBase) focusRipple={false} disableRipple={true} disabled={false} component="div" aria-expanded={false} className="MuiExpansionPanelSummary-root-43" onFocusVisible={[Function]} onBlur={[Function]} onClick={[Function]}>
                                <ButtonBase focusRipple={false} disableRipple={true} disabled={false} component="div" aria-expanded={false} className="MuiExpansionPanelSummary-root-43" onFocusVisible={[Function]} onBlur={[Function]} onClick={[Function]} classes={{...}} centerRipple={false} disableTouchRipple={false} tabIndex="0" type="button">
                                  <div className="MuiButtonBase-root-49 MuiExpansionPanelSummary-root-43" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" role="button" aria-expanded={false} onClick={[Function]}>
                                    <div className="MuiExpansionPanelSummary-content-47 RSFExpandableSection-summary-7">
                                      <WithStyles(Typography) variant="subtitle1">
                                        <Typography variant="subtitle1" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                          <h6 className="MuiTypography-root-52 MuiTypography-subtitle1-70">
                                            Title
                                          </h6>
                                        </Typography>
                                      </WithStyles(Typography)>
                                    </div>
                                    <WithStyles(IconButton) disabled={false} className="MuiExpansionPanelSummary-expandIcon-48 RSFExpandableSection-summaryIconWrap-9" component="div" tabIndex={-1} aria-hidden="true">
                                      <IconButton disabled={false} className="MuiExpansionPanelSummary-expandIcon-48 RSFExpandableSection-summaryIconWrap-9" component="div" tabIndex={-1} aria-hidden="true" classes={{...}} color="default">
                                        <WithStyles(ButtonBase) className="MuiIconButton-root-87 MuiExpansionPanelSummary-expandIcon-48 RSFExpandableSection-summaryIconWrap-9" centerRipple={true} focusRipple={true} disabled={false} component="div" tabIndex={-1} aria-hidden="true">
                                          <ButtonBase className="MuiIconButton-root-87 MuiExpansionPanelSummary-expandIcon-48 RSFExpandableSection-summaryIconWrap-9" centerRipple={true} focusRipple={true} disabled={false} component="div" tabIndex={-1} aria-hidden="true" classes={{...}} disableRipple={false} disableTouchRipple={false} type="button">
                                            <div className="MuiButtonBase-root-49 MuiIconButton-root-87 MuiExpansionPanelSummary-expandIcon-48 RSFExpandableSection-summaryIconWrap-9" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex={-1} role="button" aria-hidden="true">
                                              <span className="MuiIconButton-label-92">
                                                <pure(ExpandMoreIcon) className="RSFExpandableSection-expandIcon-11">
                                                  <ExpandMoreIcon className="RSFExpandableSection-expandIcon-11">
                                                    <WithStyles(SvgIcon) className="RSFExpandableSection-expandIcon-11">
                                                      <SvgIcon className="RSFExpandableSection-expandIcon-11" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                        <svg className="MuiSvgIcon-root-93 RSFExpandableSection-expandIcon-11" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                          <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                                          <path fill="none" d="M0 0h24v24H0z" />
                                                        </svg>
                                                      </SvgIcon>
                                                    </WithStyles(SvgIcon)>
                                                  </ExpandMoreIcon>
                                                </pure(ExpandMoreIcon)>
                                              </span>
                                              <NoSsr defer={false} fallback={{...}}>
                                                <WithStyles(TouchRipple) innerRef={[Function]} center={true}>
                                                  <TouchRipple center={true} classes={{...}}>
                                                    <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-107" childFactory={[Function: childFactory]}>
                                                      <span className="MuiTouchRipple-root-107" />
                                                    </TransitionGroup>
                                                  </TouchRipple>
                                                </WithStyles(TouchRipple)>
                                              </NoSsr>
                                            </div>
                                          </ButtonBase>
                                        </WithStyles(ButtonBase)>
                                      </IconButton>
                                    </WithStyles(IconButton)>
                                  </div>
                                </ButtonBase>
                              </WithStyles(ButtonBase)>
                            </ExpansionPanelSummary>
                          </WithStyles(ExpansionPanelSummary)>
                          <WithStyles(Collapse) in={false} timeout="auto" aria-hidden="true">
                            <Collapse in={false} timeout="auto" aria-hidden="true" theme={{...}} classes={{...}} collapsedHeight="0px" component="div">
                              <Transition onEnter={[Function]} onEntered={[Function]} onEntering={[Function]} onExit={[Function]} onExiting={[Function]} addEndListener={[Function]} timeout={{...}} in={false} aria-hidden="true" mountOnEnter={false} unmountOnExit={false} appear={false} enter={true} exit={true} onExited={[Function: noop]}>
                                <div className="MuiCollapse-container-102" style={{...}} aria-hidden="true">
                                  <div className="MuiCollapse-wrapper-104">
                                    <div className="MuiCollapse-wrapperInner-105">
                                      <WithStyles(ExpansionPanelDetails) classes={{...}}>
                                        <ExpansionPanelDetails classes={{...}}>
                                          <div className="MuiExpansionPanelDetails-root-106 RSFExpandableSection-details-6">
                                            Foo
                                          </div>
                                        </ExpansionPanelDetails>
                                      </WithStyles(ExpansionPanelDetails)>
                                    </div>
                                  </div>
                                </div>
                              </Transition>
                            </Collapse>
                          </WithStyles(Collapse)>
                        </div>
                      </Paper>
                    </WithStyles(Paper)>
                  </ExpansionPanel>
                </WithStyles(ExpansionPanel)>
              </ExpandableSection>
            </inject-ExpandableSection>
          </WithTheme(inject-ExpandableSection)>
        </WithStyles(WithTheme(inject-ExpandableSection))>
      </Component>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`ExpandableSection should render AmpExpandableSection when amp == true 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <Component title="Title">
        <WithStyles(WithTheme(inject-ExpandableSection)) title="Title">
          <WithTheme(inject-ExpandableSection) title="Title" classes={{...}}>
            <inject-ExpandableSection theme={{...}} title="Title" classes={{...}}>
              <ExpandableSection theme={{...}} title="Title" classes={{...}} amp={true} margins={true}>
                <WithStyles(AmpExpandableSection) expandedSectionId={[undefined]} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title">
                  <AmpExpandableSection expandedSectionId={[undefined]} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title" classes={{...}} expanded={false}>
                    <WithStyles(AmpAccordion)>
                      <AmpAccordion classes={{...}}>
                        <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
                          <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
                            <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
                          </SideEffect(NullComponent)>
                        </HelmetWrapper>
                        <amp-accordion expand-single-section={true} disable-session-states={true} class="RSFAmpAccordion-accordion-132">
                          <section className="RSFAmpExpandableSection-section-126">
                            <WithStyles(Typography) variant="subtitle1" component="h3" className="RSFAmpExpandableSection-title-127">
                              <Typography variant="subtitle1" component="h3" className="RSFAmpExpandableSection-title-127" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <h3 className="MuiTypography-root-133 MuiTypography-subtitle1-151 RSFAmpExpandableSection-title-127">
                                  Title
                                  <pure(ExpandMoreIcon) className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-expand-129">
                                    <ExpandMoreIcon className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-expand-129">
                                      <WithStyles(SvgIcon) className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-expand-129">
                                        <SvgIcon className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-expand-129" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                          <svg className="MuiSvgIcon-root-168 RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-expand-129" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                            <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                            <path fill="none" d="M0 0h24v24H0z" />
                                          </svg>
                                        </SvgIcon>
                                      </WithStyles(SvgIcon)>
                                    </ExpandMoreIcon>
                                  </pure(ExpandMoreIcon)>
                                  <pure(ExpandLessIcon) className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-collapse-130">
                                    <ExpandLessIcon className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-collapse-130">
                                      <WithStyles(SvgIcon) className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-collapse-130">
                                        <SvgIcon className="RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-collapse-130" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                          <svg className="MuiSvgIcon-root-168 RSFAmpExpandableSection-toggle-128 RSFAmpExpandableSection-collapse-130" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                            <path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z" />
                                            <path fill="none" d="M0 0h24v24H0z" />
                                          </svg>
                                        </SvgIcon>
                                      </WithStyles(SvgIcon)>
                                    </ExpandLessIcon>
                                  </pure(ExpandLessIcon)>
                                </h3>
                              </Typography>
                            </WithStyles(Typography)>
                            <div className="RSFAmpExpandableSection-body-131">
                              Foo
                            </div>
                          </section>
                        </amp-accordion>
                      </AmpAccordion>
                    </WithStyles(AmpAccordion)>
                  </AmpExpandableSection>
                </WithStyles(AmpExpandableSection)>
              </ExpandableSection>
            </inject-ExpandableSection>
          </WithTheme(inject-ExpandableSection)>
        </WithStyles(WithTheme(inject-ExpandableSection))>
      </Component>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`ExpandableSection should render expanded when expanded=true 1`] = `
<TestProvider app={{...}}>
  <Provider router={{...}} app={{...}} history={{...}} nextId={[Function: nextId]}>
    <MuiThemeProviderOld theme={{...}}>
      <Component title="Title" expanded={true}>
        <WithStyles(WithTheme(inject-ExpandableSection)) title="Title" expanded={true}>
          <WithTheme(inject-ExpandableSection) title="Title" expanded={true} classes={{...}}>
            <inject-ExpandableSection theme={{...}} title="Title" expanded={true} classes={{...}}>
              <ExpandableSection theme={{...}} title="Title" expanded={true} classes={{...}} amp={true} margins={true}>
                <WithStyles(AmpExpandableSection) expandedSectionId={[undefined]} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title">
                  <AmpExpandableSection expandedSectionId={[undefined]} ExpandIcon={[Function: ShouldUpdate]} CollapseIcon={[Function: ShouldUpdate]} title="Title" classes={{...}} expanded={false}>
                    <WithStyles(AmpAccordion)>
                      <AmpAccordion classes={{...}}>
                        <HelmetWrapper defer={true} encodeSpecialCharacters={true}>
                          <SideEffect(NullComponent) defer={true} encodeSpecialCharacters={true} script={{...}}>
                            <NullComponent defer={true} encodeSpecialCharacters={true} script={{...}} />
                          </SideEffect(NullComponent)>
                        </HelmetWrapper>
                        <amp-accordion expand-single-section={true} disable-session-states={true} class="RSFAmpAccordion-accordion-195">
                          <section className="RSFAmpExpandableSection-section-189">
                            <WithStyles(Typography) variant="subtitle1" component="h3" className="RSFAmpExpandableSection-title-190">
                              <Typography variant="subtitle1" component="h3" className="RSFAmpExpandableSection-title-190" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <h3 className="MuiTypography-root-196 MuiTypography-subtitle1-214 RSFAmpExpandableSection-title-190">
                                  Title
                                  <pure(ExpandMoreIcon) className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-expand-192">
                                    <ExpandMoreIcon className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-expand-192">
                                      <WithStyles(SvgIcon) className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-expand-192">
                                        <SvgIcon className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-expand-192" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                          <svg className="MuiSvgIcon-root-231 RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-expand-192" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                            <path d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z" />
                                            <path fill="none" d="M0 0h24v24H0z" />
                                          </svg>
                                        </SvgIcon>
                                      </WithStyles(SvgIcon)>
                                    </ExpandMoreIcon>
                                  </pure(ExpandMoreIcon)>
                                  <pure(ExpandLessIcon) className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-collapse-193">
                                    <ExpandLessIcon className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-collapse-193">
                                      <WithStyles(SvgIcon) className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-collapse-193">
                                        <SvgIcon className="RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-collapse-193" classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                          <svg className="MuiSvgIcon-root-231 RSFAmpExpandableSection-toggle-191 RSFAmpExpandableSection-collapse-193" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                            <path d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z" />
                                            <path fill="none" d="M0 0h24v24H0z" />
                                          </svg>
                                        </SvgIcon>
                                      </WithStyles(SvgIcon)>
                                    </ExpandLessIcon>
                                  </pure(ExpandLessIcon)>
                                </h3>
                              </Typography>
                            </WithStyles(Typography)>
                            <div className="RSFAmpExpandableSection-body-194">
                              Foo
                            </div>
                          </section>
                        </amp-accordion>
                      </AmpAccordion>
                    </WithStyles(AmpAccordion)>
                  </AmpExpandableSection>
                </WithStyles(AmpExpandableSection)>
              </ExpandableSection>
            </inject-ExpandableSection>
          </WithTheme(inject-ExpandableSection)>
        </WithStyles(WithTheme(inject-ExpandableSection))>
      </Component>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
